<resources>
	<string name="app_name">BookIt</string>
	<string name="logo">BookIt!</string>
	<string name="email">Email</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="sign_up">Sign Up</string>
	<string name="sign_up_full_width">Already have an account? Sign in!</string>
	<string name="username_email">Username/Email</string>
	<string name="sign_in">Sign In</string>
	<string name="sign_in_full_width">Don\'t have an account? Sign up!</string>
	<string name="forgot_password_get_help">Forgot password? Get Help!</string>
	<string name="send_email">Send Email</string>
	<string name="genre_icon">Genre Icon</string>
	<string name="back_button">Back Button</string>
	<string name="discover_new_title">Discover new title!</string>
	<string name="select_the_genres_you_love">Select the genres you love</string>
	<string name="genre">Genre</string>
	<string name="make_selection">Make Selection</string>
	<string name="genre_image">Genre Image</string>
	<string name="select_genres">Select genres</string>
	<string name="search_genre">Search genre</string>
	<string name="is_selected">Is Selected</string>
	<string name="title_author_isbn">Title</string>
	<string name="genres">Genres</string>
	<string name="discover">Discover</string>
	<string name="search">Search</string>
	<string name="scanner">Scanner</string>
	<string name="favourites">Favourites</string>
	<string name="settings">Settings</string>


	<string name="details_action_favorite">Favorites Button</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="book_thumbnail">Book Thumbnail</string>
	<string name="rating_star">Rating Star</string>
	<string name="genre_background">Genre Background</string>
	<string name="image_preview">Image Preview</string>
	<string name="status_icon">Status Icon</string>
	<string name="john_doe">John Doe</string>
	<string name="johndoe12_gmail_com">johndoe12@gmail.com</string>
	<string name="options">Options</string>
	<string name="account">Account</string>
	<string name="genre_checkmark">Genre Checkmark</string>
	<string name="search_favourites">Search Favourites</string>
	<string name="popup_menu">Popup Menu</string>

	<string name="english">English</string>
	<string name="chinese">Chinese</string>
	<string name="malay">Malay</string>
	<string name="clear_history_warning">This will affect the recommendations that you will received from now on</string>
	<string name="clear_history">Clear History?</string>
	<string name="sign_out">Sign out</string>
	<string name="sign_out_warning">Are you sure?</string>
	<string name="select_language">Select Language</string>
	<string name="empty_selection_warning">Please select something to proceed!</string>
	<string name="invalid_credentials_warning">Invalid credentials entered, try again!</string>
	<string name="exit_warning">Are you sure you wish to exit?</string>
	<string name="exit_application">Exit Application?</string>
	<string name="cancel">Cancel</string>
	<string name="select">Select</string>
	<string name="empty_inputs_warning">Please fill in all of the fields before proceeding</string>
	<string name="invalid_email_warning">Please enter a valid email address</string>
	<string name="invalid_user">User does not exist</string>
	<string name="mismatch_forgot_password">Username and email do not match</string>
	<string name="resend_email">Resend Email</string>

	<string name="preference_key">BOOKIT_PREFERENCES</string>
	<string name="default_lang_key">default_lang</string>
	<string name="password_short_warning">Password is too short</string>
	<string name="username_used">Username: %s is used already, try again</string>
	<string name="email_used_warning">%s is used by another user, try again</string>
	<string name="invalid_user_account_warning">User account does not exist</string>
	<string name="send_recovery_warning">Failed to send recovery email</string>
	<string name="resend_confirmation">Recovery email has been sent</string>
	<string name="add_to_favourites">Add to favourites</string>
	<string name="remove_from_favourites">Remove from favourites</string>
	<string name="found_at">Found at:</string>
	<string name="summary">Summary</string>
	<string name="lorem_ipsum_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
	<string name="loading">Loading...</string>
	<string name="bookstore_icon">Bookstore Icon</string>
	<string name="no_prices_found">No prices were found!</string>
	<string name="no_price">No Price</string>
</resources>
