<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigationDiscover"
        android:icon="@drawable/discover"
        android:title="@string/discover" />

    <item
        android:id="@+id/navigationSearch"
        android:icon="@drawable/search"
        android:title="@string/search" />

    <item
        android:id="@+id/navigationScanner"
        android:icon="@drawable/scanner"
        android:title="@string/scanner" />

    <item
        android:id="@+id/navigationFavourites"
        android:icon="@drawable/favourites"
        android:title="@string/favourites" />

    <item
        android:id="@+id/navigationSettings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />
</menu>