<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0sp"
		android:layout_weight="1"
		android:clipToPadding="false"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="@dimen/small_padding">

		<TextView
			style="@style/Logo"
			android:layout_marginBottom="@dimen/large_padding"/>

		<team.android.projects.com.bookit.utils.ui.custom_views.clearable_edit_text.ClearableEditText
			android:id="@+id/signupEmailField"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/small_padding"
			app:hint="@string/email"
			app:inputType="email"
			app:sideIcon="@drawable/ic_mail_black_24dp"/>

		<team.android.projects.com.bookit.utils.ui.custom_views.clearable_edit_text.ClearableEditText
			android:id="@+id/signupUsernameField"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/small_padding"
			app:hint="@string/username"
			app:inputType="text"
			app:sideIcon="@drawable/ic_person_black_24dp"/>

		<team.android.projects.com.bookit.utils.ui.custom_views.clearable_edit_text.ClearableEditText
			android:id="@+id/signupPasswordField"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/large_padding"
			app:hint="@string/password"
			app:inputType="password"
			app:sideIcon="@drawable/ic_lock_black_24dp"/>

		<Button
			android:id="@+id/signUpBtn"
			style="@style/CustomRedButton"
			android:text="@string/sign_up"/>

	</LinearLayout>

	<Button
		android:id="@+id/switchSignInBtn"
		style="@style/FullWidthButton"
		android:text="@string/sign_up_full_width"/>

</LinearLayout>