<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0sp"
		android:layout_weight="1"
		android:gravity="center"
		android:orientation="vertical"
		android:paddingBottom="@dimen/large_padding"
		android:paddingEnd="@dimen/small_padding"
		android:paddingLeft="@dimen/small_padding"
		android:paddingRight="@dimen/small_padding"
		android:paddingStart="@dimen/small_padding"
		android:paddingTop="@dimen/large_padding">

		<TextView
			style="@style/Logo"
			android:layout_marginBottom="@dimen/large_padding"/>

		<EditText
			android:id="@+id/forgotPasswordEmailField"
			style="@style/CustomTextField"
			android:layout_marginBottom="@dimen/small_padding"
			android:hint="@string/username"
			android:inputType="textEmailAddress"/>

		<EditText
			android:id="@+id/forgotPasswordUsernameField"
			style="@style/CustomTextField"
			android:layout_marginBottom="@dimen/large_padding"
			android:hint="@string/password"
			android:inputType="text"/>

		<Button
			android:id="@+id/sendEmailBtn"
			style="@style/CustomRedButton"
			android:layout_marginBottom="@dimen/small_padding"
			android:text="@string/send_email"/>

	</LinearLayout>

	<Button
		android:id="@+id/switchSignInBtn"
		style="@style/FullWidthButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/sign_up_full_width"/>

</LinearLayout>