<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:clipToPadding="false"
	android:orientation="vertical"
	android:padding="@dimen/small_padding">

	<ImageView
		android:id="@+id/backBtn"
		android:layout_width="32sp"
		android:layout_height="32sp"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_alignParentTop="true"
		android:layout_marginBottom="@dimen/smallest_padding"
		android:contentDescription="@string/back_button"
		android:src="@drawable/ic_baseline_arrow_back_24px"/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:orientation="vertical">

		<ImageView
			android:id="@+id/statusIcon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginBottom="@dimen/small_padding"
			android:contentDescription="@string/status_icon"
			android:src="@drawable/success_outline"/>

		<TextView
			android:id="@+id/statusMessage"
			style="@style/LargeText"
			android:layout_gravity="center"
			android:layout_marginBottom="@dimen/small_padding"
			android:ellipsize="end"
			android:maxLines="2"
			android:minLines="2"
			android:textAlignment="center"
			tools:text="The operation was successful!"/>

		<Button
			android:id="@+id/signInBtn"
			style="@style/CustomRedButton"
			android:layout_marginBottom="@dimen/small_padding"
			android:text="@string/sign_in"/>

		<TextView
			android:id="@+id/resendEmail"
			style="@style/RegularText"
			android:layout_gravity="center"
			android:text="@string/resend_email"
			android:textColor="@color/colorAccent"/>
	</LinearLayout>

</RelativeLayout>