<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:clipToPadding="false"
	android:focusable="true"
	android:focusableInTouchMode="true"
	android:orientation="vertical"
	android:padding="@dimen/small_padding">

	<ImageView
		android:id="@+id/backBtn"
		style="@style/BackButton"
		android:layout_marginBottom="@dimen/smallest_padding"/>

	<team.android.projects.com.bookit.ui.custom.clearable_edit_text.ClearableEditText
		android:id="@+id/searchGenreField"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/small_padding"
		app:hint="@string/search_genre"
		app:inputType="text"
		app:sideIcon="@drawable/ic_search_grey_24dp"/>

	<FrameLayout
		android:id="@+id/genreSelection"
		android:layout_width="match_parent"
		android:layout_height="0sp"
		android:layout_marginBottom="@dimen/smallest_padding"
		android:layout_marginEnd="-16sp"
		android:layout_marginLeft="-16sp"
		android:layout_marginRight="-16sp"
		android:layout_marginStart="-16sp"
		android:layout_weight="1"/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="end"
		android:clipToPadding="false">

		<TextView
			android:id="@+id/cancelEdit"
			style="@style/RegularText"
			android:layout_gravity="center_vertical"
			android:layout_marginEnd="@dimen/medium_padding"
			android:layout_marginRight="@dimen/medium_padding"
			android:fontFamily="@font/roboto_bold"
			android:text="@string/cancel"/>

		<Button
			android:id="@+id/selectBtn"
			style="@style/CustomRedButton"
			android:layout_width="wrap_content"
			android:layout_gravity="end"
			android:text="@string/select"/>
	</LinearLayout>
</LinearLayout>